--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
         <article class="fabricante-row">
           <div class="fabricante-logo">
-            <img loading="lazy" src="assets/ciber/ciber1.png" alt="Cibersegurança bloco 1" onerror="this.style.display='none'">
+            <img loading="lazy" src="assets/ciber/ciber1.png" alt="NGFW - Arquitetura e Modelos" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
             <h3>Bloco 1 de Cibersegurança</h3>
@@ -216,7 +216,7 @@
 
         <article class="fabricante-row">
           <div class="fabricante-logo">
-            <img loading="lazy" src="assets/ciber/ciber2.png" alt="Cibersegurança bloco 2" onerror="this.style.display='none'">
+            <img loading="lazy" src="assets/ciber/ciber2.png" alt="NGFW - VPN IPSec" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
             <h3>Bloco 2 de Cibersegurança</h3>
@@ -228,7 +228,7 @@
 
         <article class="fabricante-row">
           <div class="fabricante-logo">
-            <img loading="lazy" src="assets/ciber/ciber3.png" alt="Cibersegurança bloco 3" onerror="this.style.display='none'">
+            <img loading="lazy" src="assets/ciber/ciber3.png" alt="NGFW - SSL VPN" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
             <h3>Bloco 3 de Cibersegurança</h3>
@@ -240,7 +240,7 @@
 
         <article class="fabricante-row">
           <div class="fabricante-logo">
-            <img loading="lazy" src="assets/ciber/ciber4.png" alt="Cibersegurança bloco 4" onerror="this.style.display='none'">
+            <img loading="lazy" src="assets/ciber/ciber4.png" alt="NGFW - APP Control/Controle de Aplicações" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
             <h3>Bloco 4 de Cibersegurança</h3>
@@ -252,7 +252,7 @@
 
         <article class="fabricante-row">
           <div class="fabricante-logo">
-            <img loading="lazy" src="assets/ciber/ciber5.png" alt="Cibersegurança bloco 5" onerror="this.style.display='none'">
+            <img loading="lazy" src="assets/ciber/ciber5.png" alt="NGFW - IPS/IDS" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
             <h3>Bloco 5 de Cibersegurança</h3>
@@ -264,7 +264,7 @@
 
         <article class="fabricante-row">
           <div class="fabricante-logo">
-            <img loading="lazy" src="assets/ciber/ciber6.png" alt="Cibersegurança bloco 6" onerror="this.style.display='none'">
+            <img loading="lazy" src="assets/ciber/ciber6.png" alt="NGFW - Identificação de Usuários" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
             <h3>Bloco 6 de Cibersegurança</h3>
@@ -276,7 +276,7 @@
 
         <article class="fabricante-row">
           <div class="fabricante-logo">
-            <img loading="lazy" src="assets/ciber/ciber7.png" alt="Cibersegurança bloco 7" onerror="this.style.display='none'">
+            <img loading="lazy" src="assets/ciber/ciber7.png" alt="NGFW - Proteção DNS" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
             <h3>Bloco 7 de Cibersegurança</h3>
@@ -288,7 +288,7 @@
 
         <article class="fabricante-row">
           <div class="fabricante-logo">
-            <img loading="lazy" src="assets/ciber/ciber8.png" alt="Cibersegurança bloco 8" onerror="this.style.display='none'">
+            <img loading="lazy" src="assets/ciber/ciber8.png" alt="NGFW - Licenciamento" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
             <h3>Bloco 8 de Cibersegurança</h3>
@@ -300,7 +300,7 @@
 
         <article class="fabricante-row">
           <div class="fabricante-logo">
-            <img loading="lazy" src="assets/ciber/ciber9.png" alt="Cibersegurança bloco 9" onerror="this.style.display='none'">
+            <img loading="lazy" src="assets/ciber/ciber9.png" alt="NGFW - URL Filtering" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
             <h3>Bloco 9 de Cibersegurança</h3>
@@ -312,7 +312,7 @@
 
         <article class="fabricante-row">
           <div class="fabricante-logo">
-            <img loading="lazy" src="assets/ciber/ciber10.png" alt="Cibersegurança bloco 10" onerror="this.style.display='none'">
+            <img loading="lazy" src="assets/ciber/ciber10.png" alt="NGFW - Gerenciamento" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
             <h3>Bloco 10 de Cibersegurança</h3>
