--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
         <article class="fabricante-row">
           <div class="fabricante-logo">
-            <img loading="lazy" src="assets/ciber/ciber7.png" alt="NGFW - Proteção DNS" onerror="this.style.display='none'">
+            <img loading="lazy" src="assets/ciber/ciber7.png" alt="NGFW - DNS Protection" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
             <h3>Bloco 7 de Cibersegurança</h3>
