--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <img loading="lazy" src="assets/ciber/ciber1.png" alt="NGFW - Arquitetura e Modelos" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
-            <h3>Bloco 1 de Cibersegurança</h3>
+            <h3>NGFW - Arquitetura e Modelos</h3>
             <p>
               Dimitri, substitua aqui o texto que você quer utilizar para que esteja aplicado ao lado das imagens.
             </p>
@@ -219,7 +219,7 @@
             <img loading="lazy" src="assets/ciber/ciber2.png" alt="NGFW - VPN IPSec" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
-            <h3>Bloco 2 de Cibersegurança</h3>
+            <h3>NGFW - VPN IPSec</h3>
             <p>
               Dimitri, substitua aqui o texto que você quer utilizar para que esteja aplicado ao lado das imagens.
             </p>
@@ -231,7 +231,7 @@
             <img loading="lazy" src="assets/ciber/ciber3.png" alt="NGFW - SSL VPN" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
-            <h3>Bloco 3 de Cibersegurança</h3>
+            <h3>NGFW - SSL VPN</h3>
             <p>
               Dimitri, substitua aqui o texto que você quer utilizar para que esteja aplicado ao lado das imagens.
             </p>
@@ -243,7 +243,7 @@
             <img loading="lazy" src="assets/ciber/ciber4.png" alt="NGFW - APP Control/Controle de Aplicações" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
-            <h3>Bloco 4 de Cibersegurança</h3>
+            <h3>NGFW - APP Control/Controle de Aplicações</h3>
             <p>
               Dimitri, substitua aqui o texto que você quer utilizar para que esteja aplicado ao lado das imagens.
             </p>
@@ -255,7 +255,7 @@
             <img loading="lazy" src="assets/ciber/ciber5.png" alt="NGFW - IPS/IDS" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
-            <h3>Bloco 5 de Cibersegurança</h3>
+            <h3>NGFW - IPS/IDS</h3>
             <p>
               Dimitri, substitua aqui o texto que você quer utilizar para que esteja aplicado ao lado das imagens.
             </p>
@@ -267,7 +267,7 @@
             <img loading="lazy" src="assets/ciber/ciber6.png" alt="NGFW - Identificação de Usuários" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
-            <h3>Bloco 6 de Cibersegurança</h3>
+            <h3>NGFW - Identificação de Usuários</h3>
             <p>
               Dimitri, substitua aqui o texto que você quer utilizar para que esteja aplicado ao lado das imagens.
             </p>
@@ -279,7 +279,7 @@
             <img loading="lazy" src="assets/ciber/ciber7.png" alt="NGFW - DNS Protection" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
-            <h3>Bloco 7 de Cibersegurança</h3>
+            <h3>NGFW - DNS Protection</h3>
             <p>
               Dimitri, substitua aqui o texto que você quer utilizar para que esteja aplicado ao lado das imagens.
             </p>
@@ -291,7 +291,7 @@
             <img loading="lazy" src="assets/ciber/ciber8.png" alt="NGFW - Licenciamento" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
-            <h3>Bloco 8 de Cibersegurança</h3>
+            <h3>NGFW - Licenciamento</h3>
             <p>
               Dimitri, substitua aqui o texto que você quer utilizar para que esteja aplicado ao lado das imagens.
             </p>
@@ -303,7 +303,7 @@
             <img loading="lazy" src="assets/ciber/ciber9.png" alt="NGFW - URL Filtering" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
-            <h3>Bloco 9 de Cibersegurança</h3>
+            <h3>NGFW - URL Filtering</h3>
             <p>
               Dimitri, substitua aqui o texto que você quer utilizar para que esteja aplicado ao lado das imagens.
             </p>
@@ -315,7 +315,7 @@
             <img loading="lazy" src="assets/ciber/ciber10.png" alt="NGFW - Gerenciamento" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
-            <h3>Bloco 10 de Cibersegurança</h3>
+            <h3>NGFW - Gerenciamento</h3>
             <p>
               Dimitri, substitua aqui o texto que você quer utilizar para que esteja aplicado ao lado das imagens.
             </p>
@@ -327,7 +327,7 @@
             <img loading="lazy" src="assets/ciber/ciber11.png" alt="Cibersegurança bloco 11" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
-            <h3>Bloco 11 de Cibersegurança</h3>
+            <h3>Cibersegurança - Bloco 11</h3>
             <p>
               Dimitri, substitua aqui o texto que você quer utilizar para que esteja aplicado ao lado das imagens.
             </p>
@@ -339,7 +339,7 @@
             <img loading="lazy" src="assets/ciber/ciber12.png" alt="Cibersegurança bloco 12" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
-            <h3>Bloco 12 de Cibersegurança</h3>
+            <h3>Cibersegurança - Bloco 12</h3>
             <p>
               Dimitri, substitua aqui o texto que você quer utilizar para que esteja aplicado ao lado das imagens.
             </p>
@@ -351,7 +351,7 @@
             <img loading="lazy" src="assets/ciber/ciber13.png" alt="Cibersegurança bloco 13" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
-            <h3>Bloco 13 de Cibersegurança</h3>
+            <h3>Cibersegurança - Bloco 13</h3>
             <p>
               Dimitri, substitua aqui o texto que você quer utilizar para que esteja aplicado ao lado das imagens.
             </p>
@@ -363,7 +363,7 @@
             <img loading="lazy" src="assets/ciber/ciber14.png" alt="Cibersegurança bloco 14" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
-            <h3>Bloco 14 de Cibersegurança</h3>
+            <h3>Cibersegurança - Bloco 14</h3>
             <p>
               Dimitri, substitua aqui o texto que você quer utilizar para que esteja aplicado ao lado das imagens.
             </p>
@@ -375,7 +375,7 @@
             <img loading="lazy" src="assets/ciber/ciber15.png" alt="Cibersegurança bloco 15" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
-            <h3>Bloco 15 de Cibersegurança</h3>
+            <h3>Cibersegurança - Bloco 15</h3>
             <p>
               Dimitri, substitua aqui o texto que você quer utilizar para que esteja aplicado ao lado das imagens.
             </p>
