--- a/index.html
+++ b/index.html
@@ -164,23 +164,24 @@
 
 </head>
 <body>
-  <header>
-    <div class="container nav">
-      <div class="brand">
-        <div class="brand-mark" aria-hidden="true"></div>
-        <div class="brand-info">
-          <div class="brand-name">Dimitri Oliveira</div>
-          <div class="brand-role">Executivo de Contas/Negócios - Vendas B2B de TI para Setor Privado e Público</div>
-          <div class="brand-area">Cibersegurança • Cloud • Network • Educação/Treinamento</div>
-        </div>
-      </div>
-      <div class="right">
-        <button class="btn langbtn" data-lang="pt-BR"><span class="flag">🇧🇷</span> <span>Português</span></button>
-        <button class="btn langbtn" data-lang="en"><span class="flag">🇺🇸</span> <span>English</span></button>
-        
+  
+<header>
+  <div class="container nav" style="display:flex;justify-content:space-between;align-items:center;padding-top:20px;">
+    <div class="left" style="display:flex;align-items:center;gap:15px;">
+      <div class="logo-gradient" style="width:45px;height:45px;background:linear-gradient(135deg,#8bb8ff,#1f66f0);border-radius:6px;"></div>
+      <div class="text-block">
+        <h1 style="margin:0;font-size:32px;font-weight:700;">Dimitri Oliveira</h1>
+        <p style="margin:2px 0 0 0;">Executivo de Contas/Negócios - Vendas B2B de TI</p>
+        <p style="margin:2px 0 0 0;">Cibersegurança • Cloud • Network • Educação/Treinamento</p>
       </div>
     </div>
-  </header>
+    <div class="right" style="display:flex;gap:10px;">
+      <button style="background:#1f66f0;color:white;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Português</button>
+      <button style="background:#1f66f0;color:white;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">English</button>
+    </div>
+  </div>
+</header>
+
 
   <main>
     <!-- Blue category bar + media placeholder -->
