Atualizado segunda 17nov25

--- a/index.html
+++ b/index.html
@@ -233,13 +233,14 @@
 
         <article class="fabricante-row">
           <div class="fabricante-logo">
-            <img loading="lazy" src="assets/ciber/ciber1.png" alt="NGFW - Arquitetura e Modelos" onerror="this.style.display='none'">
+            <img loading="lazy" src="assets/ciber/ciber1.png" alt="NGFW - Arquitetura , Fabricantes e Modelos" onerror="this.style.display='none'">
           </div>
           <div class="fabricante-text">
             <h3>NGFW - Arquitetura e Modelos</h3>
             <p>
-              Dimitri, substitua aqui o texto que você quer utilizar para que esteja aplicado ao lado das imagens.
-            </p>
+              Começando pelo tema Fabricantes que é espinhoso e gera muitos debates ! Antes proponho uma reflexão : imagine um cliente que chega na farmácia e solicita ao atendente seu melhor remédio. Acredito que para o atendente dar uma boa resposta exigirá que o mesmo faça muitas perguntas ao seu cliente. Diante disso, apontar o melhor fabricante de NGFW para um cliente também exigirá muita escuta ativa, alinhamento de expectativas, conhecimento sobre a maturidade tecnológica e momento da empresa, requisitos de negócio , níve de conhecimento da equipe de TI  e conhecimento sobre as diversas soluões que o mercado oferece. Penso que algo que deveria ser perseguido por médias e grandes empresas seja a busca pela redução de complexidade. Nessas horas lembro-me de um professor do departamento de mecânica da USP que dizia em sala de aula que " simples é o contrário de fácil " . Pois então, acredito também que a busca pela simplicidade deve ser um objetivo a ser alcançado pois o mercado de Cibersegurança <br>
+              é composto por centenas de fabricantes e a sobre posição de soluções de diversas marcas pode deixar o ambiente difícil de operar e gerenciar. Se somarmos o problema da complexidade ao fato de muitas empresas possuírem equipes enxutas , o resultado recairá em possíveis prejuízos ao negócio devido ao impacto nos serviços ofertados para clientes internos, externos, parceiros e fornecedores.
+              </p>
           </div>
         </article>
 
